# lol_arena_stats

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  generate.yml
backend/: Cargo.toml
backend/src/: contract.rs  main.rs
openapi/: arena-api.yaml
schemas/: active-arena-summary.json  api-error.json  arena-leaderboard-entry.json  arena-leaderboard-response.json  arena-player-stats.json  arena-rank-summary.json  error-response.json  health-status.json  player-profile-response.json  player-profile-summary.json  player-profile.json  player-search-response.json  player-search-result.json  recent-arena-match-summary.json  recent-arena-participant-summary.json
specs/: README.md
specs/complete/: README.md
specs/in_progress/: README.md
specs/pending/: README.md  arena-leaderboard.md  match-history-ingestion.md  player-search-and-profile.md
