[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
arena_openapi = { package = "openapi", path = "../generated/rust-server" }
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = "0.12.2"
headers = "0.4.1"
http = "1.3.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
